--- a/_includes/_third-party/comments/gitalk.html
+++ b/_includes/_third-party/comments/gitalk.html
@@ -16,7 +16,7 @@
         owner: '{{ site.gitalk.owner }}',
         admin: ['{{ site.gitalk.owner }}'],
         id: '{{ page.url }}',
-        labels: ['gitalk'],
+        labels: ['Gitalk'],
         perPage: 50,
         distractionFreeMode: true
       });
