--- a/_includes/_third-party/comments/gitalk.html
+++ b/_includes/_third-party/comments/gitalk.html
@@ -19,7 +19,7 @@
         labels: ['Gitalk'],
         perPage: 50,
         distractionFreeMode: true,
-        proxy: 'https://cors-server.68756978.xyz/github_access_token'
+        proxy: 'https://proxy-gitalk-api.netlify.app/github_access_token'
       });
       gitalk.render('gitalk-container');
 </script>
