--- a/_includes/_third-party/comments/gitalk.html
+++ b/_includes/_third-party/comments/gitalk.html
@@ -9,13 +9,15 @@
 <link rel="stylesheet" href="https://unpkg.com/gitalk/dist/gitalk.css">
 <script src="https://unpkg.com/gitalk/dist/gitalk.min.js"></script>
 <script type="text/javascript">
+      var url = '{{ page.url }}';
+      var idStr = url.substring(url.length - 51, url.length - 1);
       var gitalk = new Gitalk({
         clientID: '{{ site.gitalk.clientID }}',
         clientSecret: '{{ site.gitalk.clientSecret }}',
         repo: '{{ site.gitalk.repo }}',
         owner: '{{ site.gitalk.owner }}',
         admin: ['{{ site.gitalk.owner }}'],
-        id: '{{ page.url }}',
+        id: idStr,
         labels: ['Gitalk'],
         perPage: 50,
         distractionFreeMode: true,
