--- a/_includes/_third-party/comments/gitalk.html
+++ b/_includes/_third-party/comments/gitalk.html
@@ -20,7 +20,7 @@
         id: idStr,
         labels: ['Gitalk'],
         perPage: 50,
-        distractionFreeMode: true,
+        distractionFreeMode: false,
         proxy: 'https://proxy-gitalk-api.netlify.app/github_access_token'
       });
       gitalk.render('gitalk-container');
