--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -3,4 +3,5 @@ layout: layout
 ---
 
 {% assign __ = site.data.languages[site.language] %}
+{% include post-version-selector.html %}
 {% include index.html %}
