--- a/_sass/_schemes/Mist/_base.scss
+++ b/_sass/_schemes/Mist/_base.scss
@@ -1,5 +1,8 @@
 // Tags
 // --------------------------------------------------
+body{
+  background: #131313;
+}
 h1, h2, h3, h4, h5, h6 { margin: 20px 0 10px; }
 
 p { margin: 0 0 25px 0; }
