--- a/_sass/_variables/base.scss
+++ b/_sass/_variables/base.scss
@@ -43,11 +43,11 @@ $link-decoration-hover-color  : $black-deep;
 $border-color                 : $grey-light;
 
 // Background color for <body>
-$body-bg-color                : white;
+$body-bg-color                : #f1f1f1;
 
 // Selection
 $selection-bg                 : $blue-deep;
-$selection-color              : white;
+$selection-color              : #f1f1f1;
 
 
 
@@ -223,7 +223,7 @@ $brand-color                    : white;
 $brand-hover-color              : white;
 $brand-bg                       : $black-deep;
 
-$logo-font-size                 : 20px;
+$logo-font-size                 : 25px;
 $logo-font-size                 : if(type-of(jekyll-config('font.logo.size')) == 'number', jekyll-config('font.logo.size') + px, $logo-font-size);
 
 $site-subtitle-color            : $grey-dark;
