--- a/_sass/_common/components/back-to-top-sidebar.scss
+++ b/_sass/_common/components/back-to-top-sidebar.scss
@@ -2,7 +2,8 @@
   .back-to-top {
     display: none;
     margin: 15px -10px -20px;
-    background: $body-bg-color;
+    background: transparent;
+    color: $b2t-color;
     font-size: $b2t-font-size;
     opacity: $b2t-opacity;
     cursor: pointer;
