--- a/_sass/_variables/base.scss
+++ b/_sass/_variables/base.scss
@@ -43,7 +43,7 @@ $link-decoration-hover-color  : $black-deep;
 $border-color                 : $grey-light;
 
 // Background color for <body>
-$body-bg-color                : #f1f1f1;
+$body-bg-color                : #bfdee7;
 
 // Selection
 $selection-bg                 : $blue-deep;
