--- a/_sass/_common/components/header/site-meta.scss
+++ b/_sass/_common/components/header/site-meta.scss
@@ -34,7 +34,7 @@
 .site-subtitle {
   margin-top: 10px;
   font-size: $subtitle-font-size;
-  color: $subtitle-color;
+  color: #555;
 }
 
 .use-motion {
