--- a/_includes/_layout.html
+++ b/_includes/_layout.html
@@ -25,11 +25,11 @@
 
   <div class="{{ container_class }} {{ page_class }} ">
     <div class="headband"></div>
-
+    {% include top-fix.html %}
     <header id="header" class="header" itemscope itemtype="http://schema.org/WPHeader">
       <div class="header-inner"> {% include _partials/header.html %} </div>
     </header>
-
+  
     <main id="main" class="main">
       <div class="main-inner">
         <div class="content-wrap">
