--- a/_includes/top-fix.html
+++ b/_includes/top-fix.html
@@ -39,6 +39,7 @@
         top: 0;
         left: 0;
         width: 100vw;
+        height: 50px;
         z-index: 999;
         background-color: #fff;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
