--- a/_includes/top-fix.html
+++ b/_includes/top-fix.html
@@ -28,7 +28,6 @@
                         {% endif %}
                         {{ __.menu.search }}
                     </a>
-                </a>
             </li>
             {% endif %}
         </ul>
@@ -37,13 +36,13 @@
 </div>
 <style>
     .top-fix{
-        position: absolute;
+        position: fixed;
         top: 0;
         left: 0;
         width: 100vw;
-        height: 50px;
+        height: 55px;
         z-index: 999;
-        background-color: #fff;
+        background-color: #f1f1f1;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
     .top-menu{
