--- a/_includes/top-fix.html
+++ b/_includes/top-fix.html
@@ -1,4 +1,4 @@
-<div class="top-fix">
+<div class="top-fix" id="top-fix">
     <div class="top-menu">
         {% if site.menu %}
         <ul id="menu" class="menu">
@@ -35,7 +35,7 @@
     </div>
 </div>
 <script>
-    var top = document.querySelector('.top-fix');
+    var top = document.getElementById('top-fix');
     window.addEventListener('scroll',function (){
         const scrollY = window.scrollY || window.pageYOffset;
         if (scrollY >= 500) {
