--- a/_includes/top-fix.html
+++ b/_includes/top-fix.html
@@ -35,7 +35,7 @@
     </div>
 </div>
 <script>
-    var top = document.getElementById('top-fix');
+    var top_fixDOC = document.getElementById('top-fix');
     window.addEventListener('scroll',function (){
         const scrollY = window.scrollY || window.pageYOffset;
         if (scrollY >= 500) {
