--- a/_includes/top-fix.html
+++ b/_includes/top-fix.html
@@ -68,7 +68,7 @@
         width: 100vw;
         height: 55px;
         z-index: 999;
-        background-color: #f1f1f1;
+        background-color: #f1f1f1cc;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         transition: all 0.5s;
         display: none;
