--- a/_includes/top-fix.html
+++ b/_includes/top-fix.html
@@ -43,6 +43,11 @@
         windowWidth = window.innerWidth;
         windowHeight = window.innerHeight;
         if(windowWidth >= 768){
+            let nowScrollY = window.scrollY || window.pageYOffset;
+            if(nowScrollY >= 400){
+                top_fixDOC.style.display = 'block'
+                top_fixDOC.style.opacity = '1'
+            }
             window.addEventListener('scroll',scrollFun);
         }
         else{
@@ -55,10 +60,9 @@
         const scrollY = window.scrollY || window.pageYOffset;
         if (scrollY >= 400) {
             top_fixDOC.style.display = 'block'
-            top_fixDOC.style.opacity = '1'
+            top_fixDOC.style.animation = 'show 0.5s ease-in'
         } else {
             top_fixDOC.style.display = 'none'
-            top_fixDOC.style.opacity = '0'
         }
     }
 </script>
@@ -72,12 +76,18 @@
         z-index: 999;
         background-color: #f1f1f1ee;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        transition: all 0.5s;
         display: none;
-        opacity: 0;
     }
     .top-menu{
         position: relative;
         top: -20px;
+    }
+    @keyframes show  {
+        0%{
+            opacity: 0;
+        }
+        100%{
+            opacity: 1;
+        }
     }
 </style>
