--- a/_includes/top-fix.html
+++ b/_includes/top-fix.html
@@ -1,4 +1,4 @@
-<div class="top-fix" id="top-fix">
+<div id="top-fix">
     <div class="top-menu">
         {% if site.menu %}
         <ul id="menu" class="menu">
@@ -76,7 +76,7 @@
     }
 </script>
 <style>
-    .top-fix{
+    #top-fix{
         position: fixed;
         top: 0;
         left: 0;
