--- a/_includes/top-fix.html
+++ b/_includes/top-fix.html
@@ -71,7 +71,7 @@
     }
     function showTopFixDOC(){
         top_fixDOC.style.display = 'block';
-        top_fixDOC.style.animation = 'show 0.2s ease-in';
+        top_fixDOC.style.animation = 'show 0.15s ease-out';
         clearTimeout(timeOut);
     }
     function hideTopFixDOC(){
