--- a/_sass/_variables/custom.scss
+++ b/_sass/_variables/custom.scss
@@ -3,8 +3,8 @@
   width: 12px;
 }
 ::-webkit-scrollbar-thumb{
-  background-color: rgb(0, 117, 146,0.5);
+  background-color: #0075927F;
 }
 ::-webkit-scrollbar-thumb:hover{
-  background-color: rgb(0, 117, 146);
+  background-color: #007592FF;
 }
